--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,13 +22,13 @@ pipeline {
     stages {
         stage('Build and test') {
             steps {
-                sh "java -jar <INSERT_CHECKSTYLE_TOOL> -c ${CHECKSTYLE_FILE} src/main/**"
+                sh "java -jar https://github.com/checkstyle/checkstyle/releases/download/checkstyle-8.41/checkstyle-8.41-all.jar -c ${CHECKSTYLE_FILE} src/main/**"
 
                 sh "mvn clean test -Dtest='${UNIT_TESTS_PATH}'"
                 step([$class: 'JacocoPublisher', execPattern: 'target/jacoco.exec', exclusionPattern: '**/Main.class'])
 
                 withSonarQubeEnv("${JENKINS_SONAR_INSTALATION}") {
-                    sh "<INSERT_SONARQUBE_SCANNER> -Dsonar.host.url=${SONAR_ADDRESS} -Dproject.settings=${SONAR_PROPERTIES}"
+                    sh https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/${SONAR_BINARY}.zip -Dsonar.host.url=${SONAR_ADDRESS} -Dproject.settings=${SONAR_PROPERTIES}"
                 }
                 timeout(time: 1, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
@@ -41,14 +41,14 @@ pipeline {
                 branch "CICD-*"
             }
             steps {
-                sh "git config --global user.email '<INSERT_GITHUB_USER_EMAIL>'"
-                sh "git config --global user.name '<INSERT_GITHUB_USER_NAME>'"
+                sh "git config --global user.email sergiocastroabreu@hotmail.com
+                sh "git config --global user.name drummachine01
                 sh "git checkout -f origin/develop"
                 sh "git merge --ff ${env.GIT_COMMIT}"
                 script {
                     String gitRepo = "${env.GIT_URL}".substring(8)
                     withCredentials([usernamePassword(credentialsId: 'git-credentials', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-                        sh "git -c http.sslVerify=false push https://${GIT_USERNAME}:${GIT_PASSWORD}@${gitRepo} HEAD:<INSERT_BRANCH_TO_PUSH_TO>"
+                        sh "git -c http.sslVerify=false push https://${GIT_USERNAME}:${GIT_PASSWORD}@${gitRepo} HEAD:develop
                     }
                 }
             }
@@ -59,8 +59,8 @@ pipeline {
                 branch "develop"
             }
             steps {
-                sh "git config --global user.email '<INSERT_GITHUB_USER_EMAIL>'"
-                sh "git config --global user.name '<INSERT_GITHUB_USER_NAME>'"
+                sh "git config --global user.email sergiocastroabreu@hotmail.com
+                sh "git config --global user.name drummachine01
                 sh "git checkout -f origin/master"
                 sh "git merge --ff ${env.GIT_COMMIT}"
                 script {
@@ -68,7 +68,7 @@ pipeline {
                     sh "git tag ${pomVersion}"
                     String gitRepo = "${env.GIT_URL}".substring(8)
                     withCredentials([usernamePassword(credentialsId: 'git-credentials', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-                        sh "git -c http.sslVerify=false push https://${GIT_USERNAME}:${GIT_PASSWORD}@${gitRepo} HEAD:<INSERT_BRANCH_TO_PUSH_TO> ${pomVersion}"
+                        sh "git -c http.sslVerify=false push https://${GIT_USERNAME}:${GIT_PASSWORD}@${gitRepo} HEAD:develop ${pomVersion}"
                     }
                 }
             }
