--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,13 +22,13 @@ pipeline {
     stages {
         stage('Build and test') {
             steps {
-                sh "java -jar https://github.com/checkstyle/checkstyle/releases/download/checkstyle-8.41/checkstyle-8.41-all.jar -c ${CHECKSTYLE_FILE} src/main/**"
+                sh "java-jar /checkstyle/checkstyle.jar  -c ${CHECKSTYLE_FILE} src/main/**"
 
                 sh "mvn clean test -Dtest='${UNIT_TESTS_PATH}'"
                 step([$class: 'JacocoPublisher', execPattern: 'target/jacoco.exec', exclusionPattern: '**/Main.class'])
 
                 withSonarQubeEnv("${JENKINS_SONAR_INSTALATION}") {
-                    sh https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/${SONAR_BINARY}.zip -Dsonar.host.url=${SONAR_ADDRESS} -Dproject.settings=${SONAR_PROPERTIES}"
+                    sh sonar-scanner -Dsonar.host.url=${SONAR_ADDRESS} -Dproject.settings=${SONAR_PROPERTIES}"
                 }
                 timeout(time: 1, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
@@ -80,7 +80,7 @@ pipeline {
             }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'nexus-credentials', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
-                    sh "mvn <INSERT_MAVEN_DEPLOY_STAGE> -Dnexus.address=http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS} -DaltDeploymentRepository=releaseRepository::default::http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS}/repository/maven-releases -DskipTests"
+                    sh "mvn deploy -Dnexus.address=http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS} -DaltDeploymentRepository=releaseRepository::default::http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS}/repository/maven-releases -DskipTests"
                 }
             }
         }
