--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -59,8 +59,8 @@ pipeline {
                 branch "develop"
             }
             steps {
-                sh "git config --global user.email sergiocastroabreu@hotmail.com
-                sh "git config --global user.name drummachine01
+                sh "git config --global user.email sergiocastroabreu@hotmail.com"
+                sh "git config --global user.name drummachine01"
                 sh "git checkout -f origin/master"
                 sh "git merge --ff ${env.GIT_COMMIT}"
                 script {
@@ -80,7 +80,7 @@ pipeline {
             }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'nexus-credentials', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')]) {
-                    sh "mvn deploy -Dnexus.address=http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS} -DaltDeploymentRepository=releaseRepository::default::http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS}/repository/maven-releases -DskipTests"
+                    sh "mvn deploy -Dnexus.address=http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS} -DaltDeploymentRepository=releaseRepository::default::http://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${env.NEXUS_ADDRESS}/repository/maven-releases -Dskip"Tests"
                 }
             }
         }
